src/cli/snapshots/rtx__cli__ls__tests__ls-3.snap
---
source: src/cli/ls.rs
expression: output
---
dummy ref:master      ~/.test-tool-versions     ref:master
tiny  2.0.0
tiny  3.1.0 (missing) ~/cwd/.test-tool-versions 3
