src/cli/snapshots/rtx__cli__ls__tests__ls-5.snap
---
source: src/cli/ls.rs
expression: output
---
-> dummy ref:master          (set by ~/.test-tool-versions)
-> tiny 3.1.0                (set by ~/cwd/.test-tool-versions)

