src/cli/snapshots/rtx__cli__ls__tests__ls.snap
---
source: src/cli/ls.rs
expression: output
---
-> tiny 3.1.0                (set by ~/cwd/.test-tool-versions)

