src/cli/snapshots/rtx__cli__ls__tests__ls_current.snap
---
source: src/cli/ls.rs
expression: output
---
dummy ref:master ~/.test-tool-versions     ref:master
tiny  3.1.0      ~/cwd/.test-tool-versions 3
